--- a/12-bool.css
+++ b/12-bool.css
@@ -237,104 +237,104 @@
 
 @media all and (max-width: 768px) {
 
-  /* COLUMNS sxall screen */
-  .col-sx-1 {
+  /* COLUMNS xsall screen */
+  .col-xs-1 {
     width: calc((100%/12)*1);
   }
 
-  .col-sx-2 {
+  .col-xs-2 {
     width: calc((100%/12)*2);
   }
 
-  .col-sx-3 {
+  .col-xs-3 {
     width: calc((100%/12)*3);
   }
 
-  .col-sx-4 {
+  .col-xs-4 {
     width: calc((100%/12)*4);
   }
 
-  .col-sx-5 {
+  .col-xs-5 {
     width: calc((100%/12)*5);
   }
 
-  .col-sx-6 {
+  .col-xs-6 {
     width: 50%;
     /* width: calc((100%/12)*6); */
   }
 
-  .col-sx-7 {
+  .col-xs-7 {
     width: calc((100%/12)*7);
   }
 
-  .col-sx-8 {
+  .col-xs-8 {
     width: calc((100%/12)*8);
   }
 
-  .col-sx-9 {
+  .col-xs-9 {
     width: calc((100%/12)*9);
   }
 
-  .col-sx-10 {
+  .col-xs-10 {
     width: calc((100%/12)*10);
   }
 
-  .col-sx-11 {
+  .col-xs-11 {
     width: calc((100%/12)*11);
   }
 
-  .col-sx-12 {
+  .col-xs-12 {
     width: calc((100%/12)*12);
   }
 
-  /* /COLUMNS sxall screen */
-  /* OFFSETS sxall screen */
-  .col-offset-sx-1 {
+  /* /COLUMNS xsall screen */
+  /* OFFSETS xsall screen */
+  .col-offset-xs-1 {
     margin-left: calc((100%/12)*1);
   }
 
-  .col-offset-sx-2 {
+  .col-offset-xs-2 {
     margin-left: calc((100%/12)*2);
   }
 
-  .col-offset-sx-3 {
+  .col-offset-xs-3 {
     margin-left: calc((100%/12)*3);
   }
 
-  .col-offset-sx-4 {
+  .col-offset-xs-4 {
     margin-left: calc((100%/12)*4);
   }
 
-  .col-offset-sx-5 {
+  .col-offset-xs-5 {
     margin-left: calc((100%/12)*5);
   }
 
-  .col-offset-sx-6 {
+  .col-offset-xs-6 {
     margin-left: 50%;
     /* margin-left: calc((100%/12)*6); */
   }
 
-  .col-offset-sx-7 {
+  .col-offset-xs-7 {
     margin-left: calc((100%/12)*7);
   }
 
-  .col-offset-sx-8 {
+  .col-offset-xs-8 {
     margin-left: calc((100%/12)*8);
   }
 
-  .col-offset-sx-9 {
+  .col-offset-xs-9 {
     margin-left: calc((100%/12)*9);
   }
 
-  .col-offset-sx-10 {
+  .col-offset-xs-10 {
     margin-left: calc((100%/12)*10);
   }
 
-  .col-offset-sx-11 {
+  .col-offset-xs-11 {
     margin-left: calc((100%/12)*11);
   }
 
-  /* /OFFSETS sxall screen */
+  /* /OFFSETS xsall screen */
 }
 
 /* utility class */
